---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2025-06-27
  Features:
    - Added bromine recipe chain
    - Added chemicals for processing aseroids
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2025-06-20
  Changes:
    - Removed recipe insulated wire from aluminum
    - Removed recipe turbine blade from titanium aluminum tin and renamed turbine blade from steel recipe to be turbine blade like the item. (you will have to select again the recipe of the assembling machine)
    - Removed some capacitor recipes and kept the capacitor from aluminum recipe and renamed recipe to capacitor (you will have to select again the recipe of the assembling machine)
  Bugfixes:
    - Fixed some asteroid chunks not spawning correctly
    - Fixed power from solar panels in space for asteroids
    - Fixed CMOS recipe was not craftable at its location in tech tree
    - Fixed space science pack recipe chain
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2025-06-13
  Features:
    - Added asteroids as new space locations for acquiring minerals
  Changes:
    - Change laser technology and laser related recipes
    - Rebalanced noble metal recipes
    - Updated ja locale thanks to snow note
  Bugfixes:
    - Fixed frozen item icons on belts
    - Fixed module visualzation in alt for some buildings buildings
    - Fixed that cooling cooland could use productivity modules
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 2025-06-06
  Features:
    - Rockets are built now in silo, rocket parts are built in manufacturer
    - Added teflon recipe chain
    - Added rhodium and its alloys
  Changes:
    - Changes in space science branch of tech tree